--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
-    <hr><h3>Today we worked <br>on a group project.</br></h3></hr>
+    <hr><h3>8/26/22, We worked on our first challenge. <br>Our team succesfully passed the marble to the bucket.</br></h3></hr>
     
     <p>
       This is my first blog
