--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
-    <hr><h3>8/26/22, We worked on our first challenge. <br>Our team succesfully passed the marble to the bucket.</br></h3></hr>
-    
-    <p>
-      This is my first blog
+    <hr><h3>Week 2, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. We used TinkerCADSecond challenge was to create a 3D object in TikerCAD that looks like the object in real life.</br></h3></hr>
+    <br>Here is a picture</br>
+    <img src="tinkermouse.png";>
+    <hr><p></hr>
+  
     </p>
     
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html">Play Car Game</a>
