--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
-    <hr><h3>Week 2, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. We used TinkerCAD. Second challenge was to create a 3D object in TikerCAD that looks like the object in real life.</br></h3></hr>
+    <hr><h3>Week 2, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. Second challenge was to create a 3D object in TikerCAD that looks like the object in real life.</br></h3></hr>
     <br>Here is a picture</br>
     <img src="tinkermouse.png";>
     <hr><p></hr>
