--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
+    <h3>Week 1, We went over the syllabus and how the engineering class will work.</h3>
     <hr><h3>Week 2, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. Second challenge was to create a 3D object in TikerCAD that looks like the object in real life.</br></h3></hr>
     <br>Here is a picture</br>
     <img src="tinkermouse.png";>
