--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
-    <h3>Week 1, 9/2/22, We went over the syllabus and how the engineering class will work.</h3>
+   <hr> <h3>Week 1, 9/2/22, We went over the syllabus and how the engineering class will work.</h3></hr>
     <hr><h3>Week 2, 9/9/22, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. We will be using different mechanisms including a pulley, lever, and a wheel and axle.Second challenge was to create a 3D object in TikerCAD that looks like the object in real life. I made a computer mouse, and it was pretty challenging to make the curves.</br></h3></hr>
     <br>Here is a picture.</br>
     <img src="tinkermouse.png";
     width=150;
     height=100>
     <hr><p></hr>
-  <h3>Week 3, 9/15/22, Our group completed modeling our Goldberg in TinkerCAD. We chose one design that we thought would work the best, and that was Connor's. There was no time to waste, so we got to building. It went pretty well, but we had to make some adjustments on some dimensions and designs. So far, we have completed making the inclined plane and we are working on the pulley and lever. I am proud of my team mates.</h3>
+    
+  <h3>Week 3, 9/15/22, Our group completed modeling our Goldberg in TinkerCAD. 
+  We chose one design that we thought would work the best, and that was Connor's. 
+  There was no time to waste, so we got to building. 
+  It went pretty well, but we had to make some adjustments on some dimensions and designs. 
+  So far, we have completed making the inclined plane and we are working on the pulley and lever.
+  I am proud of my teammates.</h3>
+  
   <h4>This is my design, and this is Connor's.</h4>
   <img src="Goldbergbyme.png";
   width=150
@@ -16,6 +23,13 @@
   <img src="goldbyconnor.png";
   width=200
   height=100
+  
+  <p><hr><h3>Week 4, 9/16/22, We continued working on our project and did the challenge of the week. 
+  We used a toy car with a pin to pop the balloon. 
+  For the pulley, we will be using a cardboard tube. 
+  The challenge was to make a paper boat that can float on water with weights.
+  Our team made the boat as wide and flat as possible so that the surface tension increases. 
+  On our success, even distribution of weights were also important.</h3></hr></p>
   
   
   
