--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   
   
   <hr><p4>Play car game!</p4></hr>
-  <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html" name="Drift Hunters" scrolling="No" height="250px" width="400px" style="border:4px solid #000000;"></iframe>
+  <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
+  name="Drift Hunters" scrolling="No" height="500px" width="800px" style="border:4px solid #000000;"></iframe>
   
   
   
