--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <hr><h3>Week 2, 9/9/22, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. We will be using different mechanisms including a pulley, lever, and a wheel and axle.Second challenge was to create a 3D object in TikerCAD that looks like the object in real life. I made a computer mouse, and it was pretty challenging to make the curves.</br></h3></hr>
     <br>Here is a picture.</br>
     <img src="tinkermouse.png";
-    width=150;
-    height=100>
+    width=200;
+    height=150>
     <hr><p></hr>
     
   <h3>Week 3, 9/15/22, Our group completed modeling our Goldberg in TinkerCAD. 
@@ -16,13 +16,13 @@
   So far, we have completed making the inclined plane and we are working on the pulley and lever.
   I am proud of my teammates.</h3>
   
-  <h4>This is my design, and this is Connor's.</h4>
+  <h4>This is my design, and the one under is Connor's.</h4>
   <img src="Goldbergbyme.png";
-  width=150
-  height=100>
+  width=300
+  height=200>
   <img src="goldbyconnor.png";
-  width=200
-  height=100
+  width=400
+  height=200
   
   <p><hr><h3>Week 4, 9/16/22, We continued working on our project and did the challenge of the week. 
   We used a toy car with a pin to pop the balloon. 
@@ -31,6 +31,20 @@
   Our team made the boat as wide and flat as possible so that the surface tension increases. 
   On our success, even distribution of weights were also important.</h3></hr></p>
   
+  <p><hr><h3>Week 5, 9/23/22,We finally finished our Goldberg Machine. 
+  It took a lot of tries and fixes, but at the end we found out the best way for it to succeed.
+  First thing added was a piece of cardboard that supported the baloon, so that it stays at place. 
+  That wasn't enough, so a platform was added to make everything stable.
+  Lastly, we learned the best drop method as we kept testing it. 
+  We were proud of ourselves achieving our goal after so many failures.</h3><img src="finalgold.jpeg"; width=300
+  height=200></hr></p>
+  
+  
+  
+  
+  
+
+
   
   <hr><p4>Play car game!</p4></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
