--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
   Lastly, we learned the best drop method as we kept testing it. 
   We were proud of ourselves achieving our goal after so many failures.</h3><img src="finalgold.jpeg"; width=300
   height=200></hr></p>
-  
+  <p><h3><hr>Week 6, 9/30/22, We started on our big project. We picked up some broken laptops and dissected it. Since I knew some basics of PC parts, it wasn't that hard to identify them. But some were very old and they looked different from the newwer ones so we had to do some research.</hr></h3>
+    
+    
+  </p>
   
   
   
@@ -48,7 +51,7 @@
   
   <hr><p4>Play car game!</p4></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
-  name="Drift Hunters" scrolling="No" height="600px" width="800px" style="border:4px solid #000000;"></iframe>
+  name="Drift Hunters" scrolling="yes" height="600px" width="800px" style="border:4px solid #000000;"></iframe>
   
   
   
