--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
   Lastly, we learned the best drop method as we kept testing it. 
   We were proud of ourselves achieving our goal after so many failures.</h3><img src="finalgold.jpeg"; width=300
   height=200></hr></p>
-  <p><h3><hr>Week 6, 9/30/22, We started on our big project. We picked up some broken laptops and dissected it. Since I knew some basics of PC parts, it wasn't that hard to identify them. But some were very old and they looked different from the newwer ones so we had to do some research.</hr></h3>
+  <p><h3><hr>Week 6, 9/30/22, We started on our big project. 
+  We picked up some broken laptops and dissected it. 
+  Since I knew some basics of PC parts, it wasn't that hard to identify them. 
+  But some were very old and they looked different from the newer ones so we had to do some research.
+  We color coded the parts according to our laptops in the worksheet.
+  At the end, we followed the steps backwards to put them back together.
+  
+  
+  </hr></h3>
     
     
   </p>
