--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
   But some were very old and they looked different from the newer ones so we had to do some research.
   We color coded the parts according to our laptops in the worksheet.
   At the end, we followed the steps backwards to put them back together.
+ 
   
+  <h4>The worksheet and the parts.
+  <img src="laptoppaper.jpg";
+  width=200
+  height=200>
+  <img src= "laptopparts.png";
+  width=200
+  height=200
+  </h4>
   
   </hr></h3>
     
