--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
   But some were very old and they looked different from the newer ones so we had to do some research.
   We color coded the parts according to our laptops in the worksheet.
   At the end, we followed the steps backwards to put them back together.
- 
-  
   <h4>The worksheet and the parts.
   <img src="laptoppaper.jpg";
   width=200
@@ -54,12 +52,16 @@
   width=200
   height=200
   </h4>
-  
   </hr></h3>
-    
-    
   </p>
   
+  
+  <p><hr><h3>Week 7, 10/7/22, We made prosthetics for an animal that is missing a body part.
+  I chose the proboscis monkey, which is a monkey with a big nose.
+  We first researched about the animal, then used TinkerCAD to make the missing nose of the monkey.
+  Since it had to fuction as the original nose, I had to make a hollow space in the nose piece so it works as an echo chamber.
+  Friday, we wrote detailed directions to make a PB&J sandwich. 
+  Without detailed words, it was impossible to make the perfect sandwich.</h3></hr></p>
   
   
   
