--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   We first researched about the animal, then used TinkerCAD to make the missing nose of the monkey.
   Since it had to fuction as the original nose, I had to make a hollow space in the nose piece so it works as an echo chamber.
   Friday, we wrote detailed directions to make a PB&J sandwich. 
-  Without detailed words, it was impossible to make the perfect sandwich.</h3></hr></p>
+  Without detailed words, it was impossible to make the perfect sandwich.
+  Also, I researched some entry level jobs in the engineering field.
+  I found one in Irvine, where the qualifications were bachelor of science degree.</h3></hr></p>
   
   
   
