--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
   Also, I researched some entry level jobs in the engineering field.
   I found one in Irvine, where the qualifications were bachelor of science degree.</h3></hr></p>
   
+  <p><hr><h3>Week 8, 10/13/22, We started working on making a bottle rocket.
+  By using TinkerCAD, where I planned to be using a slim bottle.
+  The finished rocket will be fired and we will see which one goes the furthest.
+  Today, we did the flying paper challenge.
+  The goal was to make a paper that can get the closest to the bin.
+  I crumbled the paper to make a ball and i threw it, it went pretty close.
+  <p><img src= "BottleRocketTinker.png"
+  width= 200
+  height=200</p>
+  <p></p><img src= "PAPERBALLS.jpg"
+  width=200
+  height=200
+  </h3></hr></p>
   
   
 
