--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   height=200>
   <img src= "laptopparts.png";
   width=200
-  height=200
+  height=200>
   </h4>
   </hr></h3>
   </p>
@@ -71,15 +71,36 @@
   Today, we did the flying paper challenge.
   The goal was to make a paper that can get the closest to the bin.
   I crumbled the paper to make a ball and i threw it, it went pretty close.
-  <p><img src= "BottleRocketTinker.png"
+  <p><img src= "BottleRocketTinker.png";
   width= 200
-  height=200</p>
-  <p></p><img src= "PAPERBALLS.jpg"
-  width=200
   height=200
+  </p>
+  <p><img src= "PAPERBALLS.jpg";
+  width=200
+  height=200</p>
   </h3></hr></p>
   
+  <p><h3><hr>Week 9, 10/25/22, We finished making our rockets and flew them. 
+  Our final design was connor's, which was built like a plane with wings on the side.
+  We slightly modified the rocket a bit, so that it can glide through the air and go further.
+  But it didn't go as we planned, even though we used carbonated water as our fuel and changed the angles.
+  The rocket spun around constantly, and finally crashed in to the ground.
+  Next time we build, we should test more thoroughly.
   
+  Here are some pics/vids:
+<p><img src= "Rocketpic.jpg";
+  width= 200
+  height=300>
+  </p>
+  
+  <p><video src= "rocketvid.mp4";
+  width=500
+  height=500>
+  </p>
+
+
+
+  </hr></h3></p>
 
 
   
