--- a/index.html
+++ b/index.html
@@ -98,12 +98,27 @@
   height=500
   controls> </video>
   </p>
-
-
-
   </hr></h3></p>
 
+<p><h3><hr>Week 10, 11/4/22, we started to learn about electric engineering.
+We used the Ohm's Law to find the Voltage, Amps, and the resistance in a given situation.
+With TinkerCAD, we made parallel and series cercuits.
+The next class, I created a circuit in real life, based on the ones that we made in TinkerCAD.
+I first thought we didn't have enough wires, but we figured out a way and succesfully made the cicuits.
+Here are some photos: 
+<p><img src= "";
+  width= 200
+  height=300>
+  </p>
+  <p><img src= "";
+  width= 200
+  height=300>
+  </p>
 
+
+
+
+</p></h3></hr>
   
   <hr><p4>Play car game!</p4></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
