--- a/index.html
+++ b/index.html
@@ -100,25 +100,49 @@
   </p>
   </hr></h3></p>
 
-<p><h3><hr>Week 10, 11/4/22, we started to learn about electric engineering.
+<p><h3><hr>Week 10,We worked on environmental engineering.
+Environmental engineering is about keeping our environments clean.
+That's why we did a project on filtering dirty water.
+The given materials were cotton balls, sand, big and small rocks.
+The best way was to stack them in the order of cotton, sand, small rocks, and then big rocks.
+Our group came up with a different way, we tried it the opposite of it, stacking the big rocks first.
+It didn't turn out good, the water was still very dirty!!
+</hr></h3></p>
+
+
+<p><h3><hr>
+Week 11, 11/3/22, we started to learn about electric engineering.
+In order to make the circuits, we learned how to use the Ohm's Law.
 We used the Ohm's Law to find the Voltage, Amps, and the resistance in a given situation.
-With TinkerCAD, we made parallel and series cercuits.
-The next class, I created a circuit in real life, based on the ones that we made in TinkerCAD.
-I first thought we didn't have enough wires, but we figured out a way and succesfully made the cicuits.
-Here are some photos: 
-<p><img src= "";
-  width= 200
-  height=300>
-  </p>
-  <p><img src= "";
-  width= 200
-  height=300>
-  </p>
+With TinkerCAD, we made parallel and series circuits. 
+This was to prepare for next week where we will be making an actual circuit.
+</p></h3></hr>
 
 
+  
+<p><h3><hr>
+Week 12, 11/10/22, We started to work on the actual circuit. 
+I created a circuit in real life, based on the ones that we made in TinkerCAD. 
+I first thought we didn't have enough wires, but we figured out a way and succesfully made the cicuits. 
+This week's challenge was to calculate if staying in a math class for a year would be efficient or if counting from one to million is.
+I figured that staying in the math class (120 hours) would be better than counting to a million (1000+ Hours).
 
+Here is the photo:
+<p><img src= "LEDCIRCUIT.png"; 
+width= 300 
+height=200> </p>
 
 </p></h3></hr>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
   <hr><p4>Play car game!</p4></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
