--- a/index.html
+++ b/index.html
@@ -133,8 +133,21 @@ width= 300
 height=200> </p>
 
 </p></h3></hr>
-  
-  
+
+  <p><h3><hr>
+Week 13, 11/17/22, We learned how to program codes for the arduinos.
+We first connected the arduino to our laptops, then to the circuit board.
+To make the lights flash, we had to code them in different patterns.
+I struggled understanding the directions to code but soon I got the hang of it.
+For the second pattern, we just had to copy and paste the codes from the first one but in a different order.
+Overall, it was a good experoence seeing our codes working in real life.
+  </p></h3></hr>
+  week 14
+    <p><h3><hr>
+    
+      </p></h3></hr>
+      week 15
+         <p><h3><hr>
   
   
   
