--- a/index.html
+++ b/index.html
@@ -141,14 +141,24 @@ To make the lights flash, we had to code them in different patterns.
 I struggled understanding the directions to code but soon I got the hang of it.
 For the second pattern, we just had to copy and paste the codes from the first one but in a different order.
 Overall, it was a good experoence seeing our codes working in real life.
+
+<p><img src= "week13.jpg"; 
+width= 300 
+height=200> </p>
+
   </p></h3></hr>
-  week 14
-    <p><h3><hr>
-    
-      </p></h3></hr>
-      week 15
-         <p><h3><hr>
   
+  
+  
+    <p><h3><hr>
+    Week 14, Portfolio link https://docs.google.com/document/d/1qHqips0pqW95ODeqebQD83WF8WXLAHJTymnKrgL5W3c/edit?usp=sharing
+      </p></h3></hr>
+  
+  
+  
+      <p><h3><hr>
+    Week 15, Portfolio link https://docs.google.com/document/d/1qHqips0pqW95ODeqebQD83WF8WXLAHJTymnKrgL5W3c/edit?usp=sharing
+      </p></h3></hr>
   
   
   
