--- a/index.html
+++ b/index.html
@@ -159,11 +159,22 @@ height=200> </p>
       <p><h3><hr>
     Week 15, Portfolio link https://docs.google.com/document/d/1qHqips0pqW95ODeqebQD83WF8WXLAHJTymnKrgL5W3c/edit?usp=sharing
       </p></h3></hr>
+  <p><h1><hr><center>SEMESTER 2</center></hr></h1></p>
   
+  <p><h3><hr>Week 1, we started on business engineering. 
+  For the SharkTank challenge,we thought of something from our daily lives that we wanted to fix.
+  That's how we thought of "Sleepy Daddy", a sleeping bag that can be attached to regular mattres covers.
+  This would prevent the users from falling off the bed, and would keep the blanket with the user.
+  I think this one is the most interesting out of all the types of engineering we learned about so far.
+  </hr></h3></p>
   
-  
-  
-  
+    <p><h3><hr>Week 2, we started on chemical engineering. 
+  From studying nanofluids to metal, there were various types of fields.
+  For the challenge, we had to figure out a way to purify 60 million gallons of lake water.
+  We thought of the way to use a filtered pump to get the bromide out of the lake.
+  We coulnd't figure out how much time it would take, but it would be 60k dollars to clean the whole river.
+  The actual solution used for the real life problem was to use black floating balls and provent the sunlight from reaching the water.
+  At the end, our idea had a better cost, so I think it was sucesful.</hr></h3></p>
   
   
   
