--- a/index.html
+++ b/index.html
@@ -176,15 +176,44 @@ height=200> </p>
   The actual solution used for the real life problem was to use black floating balls and provent the sunlight from reaching the water.
   At the end, our idea had a better cost, so I think it was sucesful.</hr></h3></p>
   
+  <p><h3><hr> Week 3-8, Long term project. 
+      There were three options that we can choose between, and our group decided to go with bulding a mouse trap car.
+  Our project did not perform well. We were expecting for a very long travel distance, just like the results we saw on our previous test runs.
+  In fact, due to the parts breaking down, the car did not move at all... This incident occurred as our team put in extra force into preparing the vehicle to drive.
+  However, we are satisfied with our results as we have already observed our invention's capablities, and the design came out accordingly to the CAD we made.
+</hr></h3></p>
+
+<p><h3>I believe that if our team had extra oppertunities to run more tests, we would have been able to improve the project's results.
+We would have to practice more on improving our skill of preparing the car by reeling the wheels in cautiously.
+More glue could have been used to improve the structural stability and strength of the whole vehicle.
+Our project has never had a major failure, that could have been the reason why we didn't have a chance to locate any spots for improvement.
+This made us learn that mistakes and failures are big factors on improving the quality of the invention.
+</h3></p>
+
+<p><h3> In conclusion, it was fun to build a vehicle that functions with the drive from a mousetrap.
+The team learned a lot of lessons with building, planning, and designing, that we can use furthermore in the future.
+Based on the test results, efforts that were put in, and the teamwork, I would rate the invention a 7 out of 10.
+There definitely were plenty of room for improvements, but overall, there were also a lot of effort and time that were put in.
+Despite the disappointing final result, Conner and I think this was a very meaningful experience for the team.
+</h3></p>
+<p><h3><hr>
+Week 9, our challenge was to create a boat that will move through a gutter. 
+There was a time limit to building, planning and fixing the boat, and our team failed to submit a functioning boat.
+It was actually disqualified from the contest, as it was lacking a lot of components.
+It must have seemed like we did not put in our efforts, but that was the only option for us since we figured that the original design would not work.
+That is why our final product was just a plactic cup cut in half, we took off all the parts that were supposed to propel the boat.
+We are confident that with extra time, better results would have shown; this challenge really proved how hard it is to come up with a plan for an invention in such short time.
+</hr></h3></p>
   
   
-  <hr><p4>Play car game!</p4></hr>
+  
+  
+  
+  
+  
+  
+  <hr><p2>Play car game!</p2></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
   name="Drift Hunters" scrolling="yes" height="600px" width="800px" style="border:4px solid #000000;"></iframe>
-  
-  
-  
-  
-    </p>
     
 </html>
