--- a/index.html
+++ b/index.html
@@ -204,7 +204,13 @@ It must have seemed like we did not put in our efforts, but that was the only op
 That is why our final product was just a plactic cup cut in half, we took off all the parts that were supposed to propel the boat.
 We are confident that with extra time, better results would have shown; this challenge really proved how hard it is to come up with a plan for an invention in such short time.
 </hr></h3></p>
-  
+  <p><h3><hr>
+Week 10,we started our egg toss challenge.
+Our goal was to build a structure that will keep the egg safe when it is dropped from a two story building.
+First we individually drew a prototype of the model.
+Then, we shared and compared our designs to come up with the final design that would work the best.
+3/24, we completed the CAD and we will continue to discuss a way to build the best product with the given materials.
+</hr></h3></p>
   
   
   
