--- a/index.html
+++ b/index.html
@@ -212,8 +212,29 @@ Then, we shared and compared our designs to come up with the final design that w
 3/24, we completed the CAD and we will continue to discuss a way to build the best product with the given materials.
 </hr></h3></p>
   
+  <p><h3><hr>
+Week 11,we finished the egg drop challenge.
+The final design worked perfectly, it protected the egg from breaking when we dropped it from the balcnoy.
+This is the design.
+<p><img src= "eggdrop.jpg"; 
+width= 300 
+height=200> </p>
+The parachute made sure that the structure had a smooth landing. 
+Basically, the egg was inside the balloom, and the balloon was attached to the box inside with strings, so that it would be "floating".
+
+
+
+</hr></h3></p>
   
-  
+  <p><h3><hr>
+Week 12,Te final project has started.
+Our goal is to build a boat only with cardboards and tape that can reach the end of the pool and come back.
+We have to choose two of our group members that will go on the boat, and that was me and Leo.
+According to research, boat with the most surface area is likely to be successful.
+I have seen different designs and sketches of boats with curved/arched bottoms, but we figured that flat bottom would be the most appropriate since we are only using cardbords and limited amount of tapes.
+Finally, our design turned out to be quite simple, with two paddles for the passengers.
+
+</hr></h3></p>
   
   
   
