--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Basically, the egg was inside the balloom, and the balloon was attached to the b
 </hr></h3></p>
   
   <p><h3><hr>
-Week 12,Te final project has started.
+Week 12,The final project has started.
 Our goal is to build a boat only with cardboards and tape that can reach the end of the pool and come back.
 We have to choose two of our group members that will go on the boat, and that was me and Leo.
 According to research, boat with the most surface area is likely to be successful.
