--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   </font><center><h1><b>HELLO</b></h1></center>
     <hr><marquee><center><h2>Welcome to Theo's Website</h2></center></Marquee></hr>
+  
+  <body style="background-color: rgb(142, 203, 230);">
+</body>
+  
    <hr> <h3>Week 1, 9/2/22, We went over the syllabus and how the engineering class will work.</h3></hr>
     <hr><h3>Week 2, 9/9/22, We worked on our project and our second challenge. <br>The project was making a machine to pop the baloon. We will be using different mechanisms including a pulley, lever, and a wheel and axle.Second challenge was to create a 3D object in TikerCAD that looks like the object in real life. I made a computer mouse, and it was pretty challenging to make the curves.</br></h3></hr>
     <br>Here is a picture.</br>
@@ -236,7 +240,15 @@ Finally, our design turned out to be quite simple, with two paddles for the pass
 
 </hr></h3></p>
   
-  
+    <p><h3><hr>
+Week 13,We started building the cardboard boat.
+We did not have tape, so we had to cut out the sides first.
+Cutting cardboard with exact dimentions was pretty hard, we had to try multiple times cutting and drawing.
+There had to be multiple changes made to the original tinkerCAD design because we found out that our boat would be too wide and tall.
+Finally, we decided that we split the boat floor, because one piece of cardboard was not long enough.
+It is not sure if our boat will be fully waterproof, but we will try our best to use the tapes efficiently to make it work as besst as it can.
+
+</hr></h3></p>
   
   
   <hr><p2>Play car game!</p2></hr>
