--- a/index.html
+++ b/index.html
@@ -250,6 +250,49 @@ It is not sure if our boat will be fully waterproof, but we will try our best to
 
 </hr></h3></p>
   
+  <p><h3><hr>
+Week 14, Our group built a prototype boat to test.
+The prototype was originally supposed to be in scale to the TinkerCAD design, but we were informed of it in last minute, so we had to build a non-measured boat that just had the same shape.
+So instead of testing if our boat desing would be able to hold a certain amount of weight, we tested if our design would be able to prevent the boat from leaking.
+The prototype boat held two bricks, which means that it held 8 lbs.
+The boat was approximately as big as a chromebook screen, so we agreed that the original boat design woukd work.
+Here is a picture:
+<p><img src= "protoboat.jpg"; 
+width= 300 
+height=200> </p>
+
+</hr></h3></p>
+  
+  <p><h3><hr>
+Week 15,we started building the final boat.
+There were limited amount of tape that we can use, so we had to be careful of how much we were using.
+We only used a few strips to build a temporary support for the whole structure.
+To make sure that the boat is waterproof, we thought of the most efficient way to tape it.
+Finally, we decided that this will be the way to tape the carbaords together. 
+<p><img src= "boxboattape.jpeg"; 
+width= 300 
+height=200> </p>
+This way, it will make the boat last a little longer.
+</hr></h3></p>
+  
+<p><h3><hr>
+Week 16, We continued building the boat.
+We finally got a full roll of tape, so we actaully got to build the boat.
+The overall boat design is pretty simple, so we tried decorating it.
+We made a cover on top of the boat, so it almost looks like a submarine when you go inside.
+<p><img src= "intheboat.jpeg"; 
+width= 300 
+height=200> </p>
+There is a door on top that lets you out to row the boat.
+However, there is one problem that we would have to fix, it is that we almost ran out of tape.
+We will soon decide what we should do with the rest of the tape.
+
+</hr></h3></p>
+  
+  
+  
+  
+  
   
   <hr><p2>Play car game!</p2></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
