--- a/index.html
+++ b/index.html
@@ -289,6 +289,32 @@ We will soon decide what we should do with the rest of the tape.
 
 </hr></h3></p>
   
+    <p><h3><hr>
+Week 17,We started a mini project as we finished the box boat.
+It was to build a paper roller coaster only with tape.
+The amount of tape and paper was not limited, so it was not that challenging.
+Some of our groupmates has experience building ramps and loops out of paper, so that also helped.
+The requirements were that we had to include two loops in the whole course.
+
+<p><img src= "week17.jpg"; 
+width= 300 
+height=200> </p>
+A lot of speed was needed to succesfully go through the loops.
+</hr></h3></p>
+  
+  
+    <p><h3><hr>
+Week 18,We added a few more structures on the roller coaster.
+The whole course was not that long, as we made it so that the marbles moved with speed.
+So, we decided to make a switchback feature in the beginning of the roller coaster.
+It worked well, except that it failed to transition to the main drops and paths.
+We still got full points, but it was one unsuccessful piece we failed to build.
+
+<p><img src= "week18.jpg"; 
+width= 300 
+height=200> </p>
+Until we added the beginning feature, it worked perfectly...
+</hr></h3></p>
   
   
   
