--- a/index.html
+++ b/index.html
@@ -316,12 +316,35 @@ height=200> </p>
 Until we added the beginning feature, it worked perfectly...
 </hr></h3></p>
   
+      <p><h3><hr>
+Week 19, We worked on a short project: making a book holder that will keep the book standing even when slapped.
+The only materials were papers and tape, but there were no limits on how much we can use them.
+In order to make this successful, we made attached a long support and a secure casing for the book.
+As a result, the holder was able to keep the book still even with multiple slaps.
+
+<p><img src= "Week19.png"; 
+width= 300 
+height=200> </p>
+The rolled papers were stable and durable, and the length of them were able to keep the book standing still.
+</hr></h3></p>
   
   
   
   
   <hr><p2>Play car game!</p2></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
-  name="Drift Hunters" scrolling="yes" height="600px" width="800px" style="border:4px solid #000000;"></iframe>
+  name="Drift Hunters" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
+
+ <hr><p2>Play Baskeball game!</p2></hr>
+  <iframe src="https://sites.google.com/site/classroom6x/basketball-stars"
+  name="Basketball Stars" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
+
+<hr><p2>Play FPS game!</p2></hr>
+  <iframe src="https://sites.google.com/site/classroom6x/1v1-lol"
+  name="1v1.lol" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
+
+
+
+
     
 </html>
