--- a/index.html
+++ b/index.html
@@ -329,20 +329,22 @@ The rolled papers were stable and durable, and the length of them were able to k
 </hr></h3></p>
   
   
-  
+  <p><h3><hr>
+HERE ARE SOME GAMES TO ENJOY
+</hr></h3></p>
   
   <hr><p2>Play car game!</p2></hr>
   <iframe src="https://v6p9d9t4.ssl.hwcdn.net/html/1792221/ItchIO/index.html"
   name="Drift Hunters" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
 
  <hr><p2>Play Baskeball game!</p2></hr>
-  <iframe src="https://sites.google.com/site/classroom6x/basketball-stars"
+ <iframe src="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/r3tq6l1/to9d2if3dv@66c73577d404dbf17a688cd4ae3198db4ba840d4/zm48hw/bs.xml"
   name="Basketball Stars" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
 
+  
 <hr><p2>Play FPS game!</p2></hr>
-  <iframe src="https://sites.google.com/site/classroom6x/1v1-lol"
+  <iframe src="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/ko1ov/jd83hf02ld65la32mdl4@44ac320eee35a6f332b3c07c0a81e611267e640c/1v1.xml"
   name="1v1.lol" scrolling="yes" height="700px" width="900px" style="border:4px solid #000000;"></iframe>
-
 
 
 
